--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.314.0",
     "mongoose": "^8.0.4",
     "monodb": "^1.5.1",
     "next": "14.0.4",
