--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "fs": "0.0.1-security",
     "lucide-react": "^0.314.0",
     "mongoose": "^8.0.4",
     "monodb": "^1.5.1",
