--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "formidable": "^3.5.1",
     "fs": "0.0.1-security",
     "lucide-react": "^0.314.0",
     "mongoose": "^8.0.4",
     "monodb": "^1.5.1",
+    "multer": "1.4.5-lts.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -29,12 +32,18 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "express": "link:@/types/express",
+    "formidable-serverless": "link:@/types/formidable-serverless",
+    "mv": "link:@/types/mv",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
